--- a/src/QuranX.Web/Views/Shared/_Layout.cshtml
+++ b/src/QuranX.Web/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                     <li>@Html.RouteLink("Commentaries", "Commentators")</li>
                     <li>@Html.RouteLink("Hadiths", "HadithCollections")</li>
                     <li>@Html.RouteLink("Search", "SiteSearch")</li>
-                    <li>@Html.RouteLink("Dictionaries", "Dictionaries")</li>
+                    <li>@Html.RouteLink("Dictionaries", "Dictionaries", new { Root = (string)null })</li>
                     <li>@Html.RouteLink("Help", "Help")</li>
                     <li>@Html.RouteLink("About", "About")</li>
                 </ul>
